# atomic

./: CMakeCache.txt  CMakeLists.txt  Makefile  atomic  cmake_install.cmake
bin2/: Makefile  cmake_install.cmake
src/: Makefile  bordered_rectangle.cpp  bordered_rectangle.h  bordered_square.cpp  bordered_square.h  color.cpp  color.h  drawable.h  element_buffer.cpp  element_buffer.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  rectangle_parent.cpp  rectangle_parent.h  shader.cpp  shader.h  square.cpp  square.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/res/shaders/: bordered_rect.fs  bordered_rect.vs  fragment.fs  rect.fs  rect.vs  vertex.vs
